Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
Submitted: 26 May 2008 16:30 Modified: 17 Oct 2008 19:34
Reporter: Ingo Strüwing
Status: Closed
Category:Tests: Replication Severity:S2 (Serious)
Version:6.0-engines-merge OS:Any
Assigned to: Andrei Elkin Target Version:6.0
Tags: disabled, sporadic, pushbuild, test failure
Triage: D3 (Medium)

[26 May 2008 16:30] Ingo Strüwing
Description:
Seen on sapsrv1 in 6.0-engines-merge:

slave.err: rpl.rpl_temporary_errors: 080523 14:17:40 [Warning] Slave: Deadlock found when
trying to get lock; try restarting transaction Error_code: 1213

I will disable the test case. Please re-enable after fix.

How to repeat:
See pushbuild.
[26 May 2008 16:39] Ingo Strüwing
Also on pb-valgrind.
[27 May 2008 15:23] Sveta Smirnova
Thank you for the report.

I can not repeat described behavior.
[5 Jun 2008 19:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47491

2612 Andrei Elkin	2008-06-05
      Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
      
      The failure was due to incorrect type of the error reporting function was invoked
      at time the slave sql was about to leave.
      
      Fixed with correcting that to use the type of logging corrsponding to the error's
level.
[13 Jun 2008 21:59] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47860

2657 Andrei Elkin	2008-06-13
      Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
      
      The failure was due to incorrect type of the error reporting function was invoked
      at time the slave sql was about to leave.
            
      Fixed with correcting that to use the type of logging corrsponding to the error's.
      
      Side effect of this patch is fixes for 4 tests in pb. only recording new results and
preventing
      execution (on embedded) was needed to be done.
[13 Jun 2008 22:11] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47861

2658 Andrei Elkin	2008-06-13
      Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
      
      the 2nd patch merely adds comments for two files.
[14 Jun 2008 12:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47866

2659 Andrei Elkin	2008-06-14
      Failing tests fixing:  main.rpl_slave_transaction_retries_basic_64 can/should not
execute on embedded.
[16 Jun 2008 12:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47898

2660 Andrei Elkin	2008-06-16
      bug#36968 rpl_temporary_errors
      
      Adding the Deadlock error suppression to the test file.
[16 Jun 2008 13:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47900

2661 Andrei Elkin	2008-06-16
      bug36968 rpl_temporary_errors
      
      Removing the global-wise suppression for deadlock error in favor of to use
      the per-test suppression.
      A test that is suppossed to generate an error in the error log needs to instruct
      mtr about is with a terminating line like:
      
        call mtr.add_supression("Error .*Deadlock found");
[23 Jun 2008 14:44] Andrei Elkin
Pushed to 6.0-rpl.
[17 Jul 2008 12:36] Alexander Nozdrin
A test case is disabled in 6.0 due to often failures.
[25 Aug 2008 12:18] Sven Sandberg
Setting back to verified. The bug exists in 5.1 too. See:

https://intranet.mysql.com/secure/pushbuild/showpush.pl?dir=bzr_mysql-5.1-rpl&order=33
pb-valgrind/n_mix

Andrei, please backport to 5.1-rpl.

Triage, please set the sr51test tag.
[25 Aug 2008 14:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/52444

2661 Andrei Elkin	2008-08-25
      Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
      
      Backporting fixes to 5.1 from 6.0.
[25 Aug 2008 14:45] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/52445

2707 Andrei Elkin	2008-08-25 [merge]
      null-merge with 5.1-rpl for bug#36968.

-- 
MySQL Code Commits Mailing List
For list archives: http://lists.mysql.com/commits
To unsubscribe:    http://lists.mysql.com/commits?unsub=commits@bugs.mysql.com
[25 Aug 2008 14:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/52449

2707 Andrei Elkin	2008-08-25 [merge]
      null-merge with 5.1-rpl for bug#36968.

-- 
MySQL Code Commits Mailing List
For list archives: http://lists.mysql.com/commits
To unsubscribe:    http://lists.mysql.com/commits?unsub=commits@bugs.mysql.com
[25 Aug 2008 14:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/52450

2661 Andrei Elkin	2008-08-25
      Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
      
      Backporting fixes to 5.1 from 6.0.
[25 Aug 2008 14:56] Andrei Elkin
Pushed to 6.0-rpl (null-cset merge) and to 5.1-rpl.
[2 Oct 2008 9:46] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55003

2756 Andrei Elkin	2008-10-02
      Bug #36968 rpl_temporary_errors.test produces warning in pushbuild
      
      backporting a part of the bug patch to 5.1.29 tree which uses an older version of
mtr.
[2 Oct 2008 9:58] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55005

2837 Andrei Elkin	2008-10-02
      null-merge with 5.1.29 backported suppression rule of bug#36968.

-- 
MySQL Code Commits Mailing List
For list archives: http://lists.mysql.com/commits
To unsubscribe:    http://lists.mysql.com/commits?unsub=commits@bugs.mysql.com
[2 Oct 2008 10:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55009

2837 Andrei Elkin	2008-10-02 [merge]
      merge of the backported from 6.0-main deadlock suppression rule (Bug #36968).
[2 Oct 2008 10:52] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55020

2838 Andrei Elkin	2008-10-02 [merge]
      merge with 5.1-5.1.29 (backported from 6.0-main fixes of bug#36968)
[2 Oct 2008 10:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55021

2838 Andrei Elkin	2008-10-02 [merge]
      merge with 5.1-5.1.29 (backported from 6.0-main fixes of bug#36968)
[3 Oct 2008 16:49] Andrei Elkin
pushed to {5.1,6.0}-5.1.29.
[9 Oct 2008 19:53] Bugs System
Pushed into 5.1.30  (revid:aelkin@mysql.com-20081002074614-qxwbs0ki6zoml9ge) (version
source revid:kgeorge@mysql.com-20081007082452-gk4l86zq8k53wwyo) (pib:4)
[15 Oct 2008 17:04] Paul DuBois
This is actually pushed to 5.1.29, not 5.1.30.
[15 Oct 2008 19:28] Paul DuBois
No user-visible changes. No changelog entry needed.

Setting report to NDI pending push into 6.0.x.
[17 Oct 2008 18:43] Bugs System
Pushed into 6.0.8-alpha  (revid:aelkin@mysql.com-20081002085213-nv1nd88wudf58ysv) (version
source revid:kgeorge@mysql.com-20081007153644-uypi14yjgque9obc) (pib:5)
[17 Oct 2008 19:34] Paul DuBois
No changelog entry needed.
[28 Oct 2008 22:02] Bugs System
Pushed into 5.1.29-ndb-6.2.17  (revid:aelkin@mysql.com-20081002074614-qxwbs0ki6zoml9ge)
(version source revid:tomas.ulin@sun.com-20081028140209-u4emkk1xphi5tkfb) (pib:5)
[28 Oct 2008 23:20] Bugs System
Pushed into 5.1.29-ndb-6.3.19  (revid:aelkin@mysql.com-20081002074614-qxwbs0ki6zoml9ge)
(version source revid:tomas.ulin@sun.com-20081028194045-0353yg8cvd2c7dd1) (pib:5)
[1 Nov 2008 10:45] Bugs System
Pushed into 5.1.29-ndb-6.4.0  (revid:aelkin@mysql.com-20081002074614-qxwbs0ki6zoml9ge)
(version source revid:jonas@mysql.com-20081101082305-qx5a1bj0z7i8ueys) (pib:5)
[30 Jan 14:31] Bugs System
Pushed into 6.0.10-alpha (revid:luis.soares@sun.com-20090129165607-wiskabxm948yx463)
(version source revid:luis.soares@sun.com-20090129163120-e2ntks4wgpqde6zt) (merge vers:
6.0.10-alpha) (pib:6)
[30 Jan 16:11] Bugs System
Pushed into 5.1.32 (revid:luis.soares@sun.com-20090129165946-d6jnnfqfokuzr09y) (version
source revid:mats@mysql.com-20080827100016-gs6206sw8dsv7hta) (merge vers: 5.1.28) (pib:6)
[17 Feb 16:00] Bugs System
Pushed into 5.1.32-ndb-6.3.23 (revid:tomas.ulin@sun.com-20090217131017-6u8qz1edkjfiobef)
(version source revid:tomas.ulin@sun.com-20090203133556-9rclp06ol19bmzs4) (merge vers:
5.1.32-ndb-6.3.22) (pib:6)
[17 Feb 17:48] Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:tomas.ulin@sun.com-20090217134419-5ha6xg4dpedrbmau)
(version source revid:tomas.ulin@sun.com-20090203133556-9rclp06ol19bmzs4) (merge vers:
5.1.32-ndb-6.3.22) (pib:6)
[17 Feb 19:24] Bugs System
Pushed into 5.1.32-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090217134216-5699eq74ws4oxa0j)
(version source revid:tomas.ulin@sun.com-20090201210519-vehobc4sy3g9s38e) (merge vers:
5.1.32-ndb-6.2.17) (pib:6)